Toelichting top2000 toegevoegd

--- a/top2000/top2000.md
+++ b/top2000/top2000.md
@@ -5,14 +5,7 @@ Je kunt de top 2000 van npo.nl gebruiken om te oefenen met MongoDB queries.
 Hiervoor moet je eerst het csv-bestand inlezen, via de volgende linux shell opdracht in een terminal-venster:
 
 ```
-mongoimport --type csv --db top2000 --file top2000/top-2000-2015.csv --fields nummer,titel,artiest,jaar --collection top2015
-```
-
-Je kunt in de MongoDB shell deze gegevens gebruiken via:
-
-```
-> use top2000
-> db.top2015.find()
+mongoimport --type csv --db top2000 --file top2000/TOP-2000-2015-2.csv --fields nummer,titel,artiest,jaar --collection top2015
 ```
 
 Suggestie: probeer de volgende elementen:
